--- a/Web.config
+++ b/Web.config
@@ -43,7 +43,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="LibrosEntities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-C3R3GUB;initial catalog=Libros;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LibrosEntities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqlserverinstancetwo.database.windows.net;Initial Catalog=Libros;Persist Security Info=True;User ID=Steven;Password=test12345.&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -55,5 +55,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+   <system.web>
+    <customErrors mode="Off"/>
+  </system.web>
 </configuration>
 <!--ProjectGuid: 988B911B-9872-4BD3-9D29-3C58998842F7-->
