--- a/Web.config
+++ b/Web.config
@@ -43,7 +43,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="LibrosEntities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqlserverinstancetwo.database.windows.net;Initial Catalog=Libros;Persist Security Info=True;User ID=Steven;Password=test12345.&quot;" providerName="System.Data.EntityClient" />
+    <add name="LibrosEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlservertwo.database.windows.net;initial catalog=Libros;user id=Steven;password=test12345.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
